--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,9 +10,8 @@ services:
       - 8096:8096
       - 8920:8920
     volumes:
-      - /home/jovan/containers/starr/config/jellyfin:/config
-      - /media/movies:/media/movies  # Moives
-      - /media/tv:/media/tv  #TV
+      - ./config/jellyfin:/config # Config
+      - /media:/data
     restart: unless-stopped
   sonarr:
     container_name: sonarr
@@ -24,9 +23,8 @@ services:
     ports:
       - 8989:8989
     volumes:
-      - /home/jovan/containers/starr/config/sonarr:/config
-      - /media/tv:/media/tv # TV
-      - /media/downloads/tv:/media/downloads/tv # Downloads
+      - ./config/sonarr:/config # Config
+      - /media:/data
     restart: unless-stopped
   radarr:
     container_name: radarr
@@ -38,9 +36,8 @@ services:
     ports:
       - 7878:7878
     volumes: 
-      - /home/jovan/containers/starr/config/radarr:/config
-      - /media/movies:/media/movies # Movies
-      - /media/downloads/movies:/media/downloads/movies # Downloads
+      - ./config/radarr:/config # Config
+      - /media:/data
     restart: unless-stopped
   prowlarr:
     container_name: prowlarr
@@ -52,7 +49,7 @@ services:
     ports:
       - 9696:9696
     volumes:
-      - /home/jovan/containers/starr/config/prowlarr:/config
+      - ./config/prowlarr:/config # Config
     restart: unless-stopped
   qbittorrent:
     container_name: qbittorrent
@@ -64,10 +61,26 @@ services:
       - WEBUI_PORT=8080
       - TORRENTING_PORT=6881
     volumes:
-      - /home/jovan/containers/starr/config/qbittorrent:/config
-      - /media/downloads:/media/downloads # Downloads
+      - ./config/qbittorrent:/config # Config
+      - /media:/data/
+      
     ports:
       - 8080:8080
       - 6881:6881
       - 6881:6881/udp
     restart: unless-stopped
+  reverse-proxy:
+    container_name: nginx
+    image: nginx
+    environment:
+      - PUID=1000
+      - PGID=1000
+      - TZ=Europe/Belgrade
+    volumes:
+      - ./config/nginx:/etc/nginx # Config
+    ports:
+      - 80:80
+      - 443:443
+    restart: unless-stopped
+      
+    
