--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,18 +1,4 @@
 services:
-  jellyfin:
-    container_name: jellyfin
-    image: lscr.io/linuxserver/jellyfin:latest
-    environment:
-      - PUID=1000
-      - PGID=1000
-      - TZ=Europe/Belgrade
-    ports:
-      - 8096:8096
-      - 8920:8920
-    volumes:
-      - ./config/jellyfin:/config # Config
-      - /media:/data
-    restart: unless-stopped
   sonarr:
     container_name: sonarr
     image: lscr.io/linuxserver/sonarr:latest
@@ -39,6 +25,19 @@ services:
       - ./config/radarr:/config # Config
       - /media:/data
     restart: unless-stopped
+  bazarr:
+    container_name: bazarr
+    image: lscr.io/linuxserver/bazarr:latest
+    environment:
+      - PUID=1000
+      - PGID=1000
+      - TZ=Europe/Belgrade
+    ports:
+      - 6767:6767
+    volumes:
+      - ./config/bazarr:/config # Config
+      - /media:/data
+    restart: unless-stopped
   prowlarr:
     container_name: prowlarr
     image: lscr.io/linuxserver/prowlarr:latest
@@ -51,6 +50,7 @@ services:
     volumes:
       - ./config/prowlarr:/config # Config
     restart: unless-stopped
+
   qbittorrent:
     container_name: qbittorrent
     image: lscr.io/linuxserver/qbittorrent:latest
@@ -65,22 +65,23 @@ services:
       - /media:/data/
       
     ports:
-      - 8080:8080
-      - 6881:6881
-      - 6881:6881/udp
+      - 8999:8080
+      - 6999:6881
+      - 6999:6881/udp
     restart: unless-stopped
-  reverse-proxy:
-    container_name: nginx
-    image: nginx
+
+  jellyfin:
+    container_name: jellyfin
+    image: lscr.io/linuxserver/jellyfin:latest
     environment:
       - PUID=1000
       - PGID=1000
       - TZ=Europe/Belgrade
+      - JELLYFIN_PublishedServerUrl=https://kaficacraft.hopto.org
     volumes:
-      - ./config/nginx:/etc/nginx # Config
+      - ./config/jellyfin:/config # Config
+      - /media:/data
     ports:
-      - 80:80
-      - 443:443
+      - 8096:8096
     restart: unless-stopped
-      
-    
+  
